Fixed alignment for input and message boxes and styled submit button and its div.

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ a img {
 }
 
 .btnCont a,
-.btnCont input {
+.btnCont {
     text-decoration: none;
     display: flex;
     color: #FFFFFF;
@@ -378,10 +378,25 @@ form {
 
 label {
     font-weight: 600;
+    display: flex;
+    flex-direction: column;
     font-size: 12px;
     line-height: 100%;
     letter-spacing: 0%;
     color: #FFFFFF;
+}
+
+.formCont .btnCont,
+.btnCont input {
+    text-decoration: none;
+    display: flex;
+    color: #FFFFFF;
+    height: 63px;
+    border: none;
+    font-family: "IBM Plex Mono", monospace;
+    background-color: #3F8E00;
+    align-items: center;
+    justify-content: center;
 }
 
 
